# OnlineStatistics

./: CMakeLists.txt  LICENSE  README.md
examples/: example.cpp
inc/: OnlineStatistics.h
include/: OnlineStatistics.h
src/: OnlineStatistics.cpp
tests/: OnlineStatisticsTest.cpp  TestOnlineStatistics.cpp
